Dokončení oop, opravy

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,3 +22,5 @@ lib_deps =
 	mathworks/ThingSpeak@^2.0.0
 	arduino-libraries/Ethernet@^2.0.1
 	lucadentella/SPIFFS ImageReader Library@^1.0.0
+monitor_speed = 115200
+build_flags = -DCORE_DEBUG_LEVEL=5
