--- a/platformio.ini
+++ b/platformio.ini
@@ -12,15 +12,16 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = 
-	winlinvip/SimpleDHT@^1.0.15
+lib_deps =
+	adafruit/Adafruit Unified Sensor @ ^1.1.6
+	adafruit/DHT sensor library@^1.4.4
 	milesburton/DallasTemperature@^3.11.0
 	claws/BH1750@^1.3.0
 	jchristensen/DS3232RTC@^2.0.1
 	adafruit/Adafruit GFX Library@^1.11.3
 	adafruit/Adafruit ILI9341@^1.5.12
-	mathworks/ThingSpeak@^2.0.0
-	arduino-libraries/Ethernet@^2.0.1
 	lucadentella/SPIFFS ImageReader Library@^1.0.0
+	arduino-libraries/Ethernet@^2.0.1
+	mathworks/ThingSpeak@^2.0.0
 monitor_speed = 115200
 build_flags = -DCORE_DEBUG_LEVEL=5
