--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps =
+lib_deps = 
 	adafruit/Adafruit Unified Sensor @ ^1.1.6
 	adafruit/DHT sensor library@^1.4.4
 	milesburton/DallasTemperature@^3.11.0
@@ -23,5 +23,6 @@ lib_deps =
 	lucadentella/SPIFFS ImageReader Library@^1.0.0
 	arduino-libraries/Ethernet@^2.0.1
 	mathworks/ThingSpeak@^2.0.0
+	openslab-osu/SSLClient@^1.6.11
 monitor_speed = 115200
 build_flags = -DCORE_DEBUG_LEVEL=5
